--- a/chronos-frontend/angular.json
+++ b/chronos-frontend/angular.json
@@ -29,6 +29,9 @@
             "styles": [
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/assets/scss"]
+            },
             "scripts": [],
             "es5BrowserSupport": true
           },
