--- a/chronos-frontend/package.json
+++ b/chronos-frontend/package.json
@@ -11,17 +11,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/cdk": "^7.3.3",
+    "@angular/animations": "^7.2.8",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
-    "@angular/flex-layout": "^7.0.0-beta.23",
     "@angular/forms": "~7.2.0",
-    "@angular/material": "~7.3.3",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@fortawesome/fontawesome-free": "^5.7.2",
+    "@types/chart.js": "^2.7.46",
+    "angular-bootstrap-md": "^7.4.2",
+    "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
