--- a/chronos-frontend/package.json
+++ b/chronos-frontend/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^5.7.2",
     "@types/chart.js": "^2.7.46",
     "angular-bootstrap-md": "^7.4.2",
+    "bootstrap": "^4.3.1",
     "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
