--- a/chronos-frontend/package.json
+++ b/chronos-frontend/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/fire": "^5.1.2",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
@@ -25,6 +26,7 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
+    "firebase": "^5.8.6",
     "hammerjs": "^2.0.8",
     "ngx-toastr": "^10.0.0",
     "rxjs": "~6.3.3",
